@@ -1,24 +1,49 @@
 package com.czertainly.core.service.impl;
 
 import com.czertainly.api.clients.AttributeApiClient;
-import com.czertainly.api.clients.AuthorityInstanceApiClient;
 import com.czertainly.api.clients.ConnectorApiClient;
 import com.czertainly.api.clients.HealthApiClient;
-import com.czertainly.api.exception.*;
-import com.czertainly.api.model.client.connector.*;
-import com.czertainly.api.model.common.AttributeDefinition;
+import com.czertainly.api.exception.AlreadyExistException;
+import com.czertainly.api.exception.ConnectorCommunicationException;
+import com.czertainly.api.exception.ConnectorException;
+import com.czertainly.api.exception.NotFoundException;
+import com.czertainly.api.exception.ValidationError;
+import com.czertainly.api.exception.ValidationException;
+import com.czertainly.api.model.client.connector.ConnectDto;
+import com.czertainly.api.model.client.connector.ConnectRequestDto;
+import com.czertainly.api.model.client.connector.ConnectorRequestDto;
+import com.czertainly.api.model.client.connector.ConnectorUpdateRequestDto;
+import com.czertainly.api.model.client.connector.ForceDeleteMessageDto;
+import com.czertainly.api.model.client.connector.InfoResponse;
 import com.czertainly.api.model.common.HealthDto;
-import com.czertainly.api.model.common.RequestAttributeDto;
+import com.czertainly.api.model.common.attribute.AttributeDefinition;
+import com.czertainly.api.model.common.attribute.RequestAttributeDto;
 import com.czertainly.api.model.core.audit.ObjectType;
 import com.czertainly.api.model.core.audit.OperationType;
-import com.czertainly.api.model.core.connector.*;
+import com.czertainly.api.model.core.connector.BaseFunctionGroupDto;
+import com.czertainly.api.model.core.connector.ConnectorDto;
+import com.czertainly.api.model.core.connector.ConnectorStatus;
+import com.czertainly.api.model.core.connector.EndpointDto;
+import com.czertainly.api.model.core.connector.FunctionGroupCode;
+import com.czertainly.api.model.core.connector.FunctionGroupDto;
 import com.czertainly.core.aop.AuditLogged;
-import com.czertainly.core.dao.entity.*;
-import com.czertainly.core.dao.repository.*;
+import com.czertainly.core.dao.entity.AuthorityInstanceReference;
+import com.czertainly.core.dao.entity.Connector;
+import com.czertainly.core.dao.entity.Connector2FunctionGroup;
+import com.czertainly.core.dao.entity.Credential;
+import com.czertainly.core.dao.entity.Endpoint;
+import com.czertainly.core.dao.entity.EntityInstanceReference;
+import com.czertainly.core.dao.entity.FunctionGroup;
+import com.czertainly.core.dao.repository.AuthorityInstanceReferenceRepository;
+import com.czertainly.core.dao.repository.Connector2FunctionGroupRepository;
+import com.czertainly.core.dao.repository.ConnectorRepository;
+import com.czertainly.core.dao.repository.CredentialRepository;
+import com.czertainly.core.dao.repository.EntityInstanceReferenceRepository;
+import com.czertainly.core.dao.repository.FunctionGroupRepository;
+import com.czertainly.core.service.ComplianceProfileService;
+import com.czertainly.core.service.ComplianceService;
 import com.czertainly.core.service.ConnectorAuthService;
 import com.czertainly.core.service.ConnectorService;
-import com.czertainly.core.service.CoreCallbackService;
-import com.czertainly.core.service.CredentialService;
 import com.czertainly.core.util.AttributeDefinitionUtils;
 import com.czertainly.core.util.MetaDefinitions;
 import org.apache.commons.lang3.StringUtils;
@@ -30,7 +55,14 @@ import org.springframework.stereotype.Service;
 import reactor.core.Exceptions;
 
 import javax.transaction.Transactional;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -52,17 +84,18 @@ public class ConnectorServiceImpl implements ConnectorService {
     @Autowired
     private HealthApiClient healthApiClient;
     @Autowired
-    private CoreCallbackService coreCallbackService;
-    @Autowired
-    private CredentialService credentialService;
-    @Autowired
     private CredentialRepository credentialRepository;
     @Autowired
     private AuthorityInstanceReferenceRepository authorityInstanceReferenceRepository;
     @Autowired
-    private ConnectorAuthService connectorAuthService;
+    private EntityInstanceReferenceRepository entityInstanceReferenceRepository;
     @Autowired
-    private AuthorityInstanceApiClient authorityInstanceApiClient;
+    private ConnectorAuthService connectorAuthService;
+
+    @Autowired
+    private ComplianceService complianceService;
+    @Autowired
+    private ComplianceProfileService complianceProfileService;
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.REQUEST)
@@ -82,15 +115,37 @@ public class ConnectorServiceImpl implements ConnectorService {
         for (Connector connector : connectorRepository.findByStatus(ConnectorStatus.CONNECTED)) {
             ConnectorDto connectorDto = connector.mapToDto();
             for (FunctionGroupDto fg : connectorDto.getFunctionGroups()) {
-                if(functionGroup == FunctionGroupCode.AUTHORITY_PROVIDER){
+                if (functionGroup == FunctionGroupCode.AUTHORITY_PROVIDER) {
                     if (Arrays.asList(FunctionGroupCode.AUTHORITY_PROVIDER, FunctionGroupCode.LEGACY_AUTHORITY_PROVIDER).contains(fg.getFunctionGroupCode())) {
-                        connectorDto.setFunctionGroups(Arrays.asList(fg));
+                        connectorDto.setFunctionGroups(List.of(fg));
                         connectors.add(connectorDto);
                     }
-                }else {
+                } else {
                     if (fg.getFunctionGroupCode() == functionGroup) {
-                        connectorDto.setFunctionGroups(Arrays.asList(fg));
+                        connectorDto.setFunctionGroups(List.of(fg));
                         connectors.add(connectorDto);
+                    }
+                }
+            }
+        }
+        return connectors;
+    }
+
+    @Override
+    public List<Connector> listConnectorEntityByFunctionGroup(FunctionGroupCode functionGroup) {
+        List<Connector> connectors = new ArrayList<>();
+
+        for (Connector connector : connectorRepository.findByStatus(ConnectorStatus.CONNECTED)) {
+            ConnectorDto connectorDto = connector.mapToDto();
+            for (FunctionGroupDto fg : connectorDto.getFunctionGroups()) {
+                if (functionGroup == FunctionGroupCode.AUTHORITY_PROVIDER) {
+                    if (Arrays.asList(FunctionGroupCode.AUTHORITY_PROVIDER, FunctionGroupCode.LEGACY_AUTHORITY_PROVIDER).contains(fg.getFunctionGroupCode())) {
+                        connectors.add(connector);
+                    }
+                } else {
+                    if (fg.getFunctionGroupCode() == functionGroup) {
+                        connectorDto.setFunctionGroups(List.of(fg));
+                        connectors.add(connector);
                     }
                 }
             }
@@ -113,8 +168,8 @@ public class ConnectorServiceImpl implements ConnectorService {
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.REQUEST)
-    public ConnectorDto getConnector(String uuid) throws NotFoundException, ConnectorException {
-    	Connector connector = getConnectorEntity(uuid);
+    public ConnectorDto getConnector(String uuid) throws ConnectorException {
+        Connector connector = getConnectorEntity(uuid);
         ConnectorDto dto = connector.mapToDto();
 
         try {
@@ -126,7 +181,9 @@ public class ConnectorServiceImpl implements ConnectorService {
                     }
                 }
             }
-            connector.setStatus(ConnectorStatus.CONNECTED);
+            if (!connector.getStatus().equals(ConnectorStatus.WAITING_FOR_APPROVAL)) {
+                connector.setStatus(ConnectorStatus.CONNECTED);
+            }
             connectorRepository.save(connector);
         } catch (ConnectorCommunicationException e) {
             connector.setStatus(ConnectorStatus.OFFLINE);
@@ -140,7 +197,6 @@ public class ConnectorServiceImpl implements ConnectorService {
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.REQUEST)
     public Connector getConnectorEntity(String uuid) throws NotFoundException {
         return connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
@@ -173,7 +229,7 @@ public class ConnectorServiceImpl implements ConnectorService {
 
         List<ConnectDto> connectResponse = validateConnector(connectorDto);
         List<FunctionGroupDto> functionGroupDtos = new ArrayList<>();
-        for(ConnectDto dto: connectResponse){
+        for (ConnectDto dto : connectResponse) {
             functionGroupDtos.add(dto.getFunctionGroup());
         }
 
@@ -186,6 +242,8 @@ public class ConnectorServiceImpl implements ConnectorService {
         connectorRepository.save(connector);
 
         setFunctionGroups(functionGroupDtos, connector);
+
+        complianceRuleGroupUpdate(connector, false);
 
         return connector.mapToDto();
     }
@@ -217,6 +275,7 @@ public class ConnectorServiceImpl implements ConnectorService {
 
         setFunctionGroups(request.getFunctionGroups(), connector);
 
+        complianceRuleGroupUpdate(connector, false);
         return connector.mapToDto();
     }
 
@@ -230,10 +289,10 @@ public class ConnectorServiceImpl implements ConnectorService {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
-        if(request.getUrl() != null){
+        if (request.getUrl() != null) {
             connector.setUrl(request.getUrl());
         }
-        if(request.getAuthType() != null) {
+        if (request.getAuthType() != null) {
             connector.setAuthType(request.getAuthType());
             connector.setAuthAttributes(AttributeDefinitionUtils.serialize(authAttributes));
         }
@@ -242,12 +301,16 @@ public class ConnectorServiceImpl implements ConnectorService {
 
         List<ConnectDto> connectResponse = validateConnector(connector.mapToDto());
         List<FunctionGroupDto> functionGroupDtos = new ArrayList<>();
-        for(ConnectDto dto: connectResponse){
+        for (ConnectDto dto : connectResponse) {
             functionGroupDtos.add(dto.getFunctionGroup());
         }
-        connector.setStatus(ConnectorStatus.CONNECTED);
+        if (!connector.getStatus().equals(ConnectorStatus.WAITING_FOR_APPROVAL)) {
+            connector.setStatus(ConnectorStatus.CONNECTED);
+        }
         setFunctionGroups(functionGroupDtos, connector);
         connectorRepository.save(connector);
+
+        complianceRuleGroupUpdate(connector, true);
 
         return connector.mapToDto();
     }
@@ -269,10 +332,7 @@ public class ConnectorServiceImpl implements ConnectorService {
         }
 
         // removing phase
-        Iterator<Connector2FunctionGroup> functionGroupsIterator = new HashSet<>(connector.getFunctionGroups()).iterator();
-        while (functionGroupsIterator.hasNext()) {
-            Connector2FunctionGroup c2fg = functionGroupsIterator.next();
-
+        for (Connector2FunctionGroup c2fg : new HashSet<>(connector.getFunctionGroups())) {
             Optional<FunctionGroupDto> dto = functionGroups.stream()
                     .filter(fg -> fg.getUuid().equals(c2fg.getFunctionGroup().getUuid()))
                     .findFirst();
@@ -320,7 +380,7 @@ public class ConnectorServiceImpl implements ConnectorService {
             errors.add(ValidationError.create(
                     "Connector {} has {} dependent credentials",
                     connector.getName(), connector.getCredentials().size()));
-            connector.getCredentials().stream().forEach(
+            connector.getCredentials().forEach(
                     c -> errors.add(ValidationError.create(c.getName())));
         }
 
@@ -328,8 +388,22 @@ public class ConnectorServiceImpl implements ConnectorService {
             errors.add(ValidationError.create(
                     "Connector {} has {} dependent Authority instances",
                     connector.getName(), connector.getAuthorityInstanceReferences().size()));
-            connector.getAuthorityInstanceReferences().stream().forEach(
+            connector.getAuthorityInstanceReferences().forEach(
                     c -> errors.add(ValidationError.create(c.getName())));
+        }
+
+        if (!connector.getEntityInstanceReferences().isEmpty()) {
+            errors.add(ValidationError.create(
+                    "Connector {} has {} dependent Entity instances",
+                    connector.getName(), connector.getEntityInstanceReferences().size()));
+            connector.getEntityInstanceReferences().forEach(
+                    c -> errors.add(ValidationError.create(c.getName())));
+        }
+
+        for (String complianceProfileName : complianceProfileService.isComplianceProviderAssociated(connector)) {
+            errors.add(ValidationError.create(
+                    "Connector {} has {} dependent Compliance Profile",
+                    connector.getName(), complianceProfileName));
         }
 
         if (!errors.isEmpty()) {
@@ -354,17 +428,19 @@ public class ConnectorServiceImpl implements ConnectorService {
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.APPROVE)
     public void approve(List<String> uuids) throws NotFoundException, ValidationException {
-        for(String uuid: uuids){
+        for (String uuid : uuids) {
             try {
                 Connector connector = connectorRepository.findByUuid(uuid)
                         .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
                 if (ConnectorStatus.WAITING_FOR_APPROVAL.equals(connector.getStatus())) {
-                    connector.setStatus(ConnectorStatus.REGISTERED);
+                    connector.setStatus(ConnectorStatus.CONNECTED);
+                    connectorRepository.save(connector);
+                    complianceRuleGroupUpdate(connector, false);
                 } else {
                     logger.warn("Connector {} has unexpected status {}", connector.getName(), connector.getStatus());
                 }
-            }catch (NotFoundException e){
+            } catch (NotFoundException e) {
                 logger.warn("Unable to find the connector with uuid {}", uuid);
             }
         }
@@ -374,7 +450,7 @@ public class ConnectorServiceImpl implements ConnectorService {
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.CONNECT)
     public void reconnect(List<String> uuids) throws ValidationException, ConnectorException {
-        for(String uuid: uuids){
+        for (String uuid : uuids) {
             try {
                 Connector connector = connectorRepository.findByUuid(uuid)
                         .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
@@ -386,7 +462,9 @@ public class ConnectorServiceImpl implements ConnectorService {
                         .collect(Collectors.toList());
 
                 setFunctionGroups(functionGroups, connector);
-            }catch (NotFoundException e){
+
+                complianceRuleGroupUpdate(connector, true);
+            } catch (NotFoundException e) {
                 logger.warn("Unable to find the connector with uuid {}", uuid);
             }
         }
@@ -395,7 +473,7 @@ public class ConnectorServiceImpl implements ConnectorService {
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.CONNECT)
-    public List<ConnectDto> reconnect(String uuid) throws ValidationException, NotFoundException, ConnectorException {
+    public List<ConnectDto> reconnect(String uuid) throws ValidationException, ConnectorException {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
@@ -407,7 +485,26 @@ public class ConnectorServiceImpl implements ConnectorService {
 
         setFunctionGroups(functionGroups, connector);
 
+        complianceRuleGroupUpdate(connector, true);
+
         return result;
+    }
+
+    private void complianceRuleGroupUpdate(Connector connector, Boolean update) {
+        if (connector.mapToDto().getFunctionGroups().stream().map(FunctionGroupDto::getFunctionGroupCode)
+                .collect(Collectors.toList()).contains(FunctionGroupCode.COMPLIANCE_PROVIDER) && !connector.getStatus().equals(ConnectorStatus.WAITING_FOR_APPROVAL)) {
+            logger.info("Connector Implements Compliance Provider. Initiating request to update the rules and group for: {}", connector);
+            try {
+                if (update) {
+                    complianceService.updateGroupsAndRules(connector);
+                } else {
+                    complianceService.addFetchGroupsAndRules(connector);
+                }
+            } catch (ConnectorException e) {
+                logger.error(e.getMessage());
+                logger.error("Unable to fetch groups and rules for Connector: {}", connector.getName());
+            }
+        }
     }
 
     public List<ConnectDto> reValidateConnector(ConnectorDto request) throws ConnectorException {
@@ -467,30 +564,30 @@ public class ConnectorServiceImpl implements ConnectorService {
         List<FunctionGroupCode> connectFunctionGroupCodeList = functions.stream().map(BaseFunctionGroupDto::getFunctionGroupCode).collect(Collectors.toList());
         Map<FunctionGroupCode, List<String>> connectFunctionGroupKindMap = new HashMap<>();
 
-        for(BaseFunctionGroupDto f: functions){
+        for (BaseFunctionGroupDto f : functions) {
             connectFunctionGroupKindMap.put(f.getFunctionGroupCode(), f.getKinds());
         }
         List<String> alreadyExistingConnector = new ArrayList<>();
 
-        for(Connector connector: connectorRepository.findAll()){
-            if(connector.getUuid().equals(uuid)){
+        for (Connector connector : connectorRepository.findAll()) {
+            if (connector.getUuid().equals(uuid)) {
                 continue;
             }
             List<FunctionGroupCode> connectorFunctionGroups = connector.getFunctionGroups().stream().map(Connector2FunctionGroup::getFunctionGroup).collect(Collectors.toList()).stream().map(FunctionGroup::getCode).collect(Collectors.toList());
-            if(connectFunctionGroupCodeList.equals(connectorFunctionGroups)){
+            if (connectFunctionGroupCodeList.equals(connectorFunctionGroups)) {
                 Map<FunctionGroupCode, List<String>> connectorFunctionGroupKindMap = new HashMap<>();
 
-                for(Connector2FunctionGroup f: connector.getFunctionGroups()){
+                for (Connector2FunctionGroup f : connector.getFunctionGroups()) {
                     connectorFunctionGroupKindMap.put(f.getFunctionGroup().getCode(), MetaDefinitions.deserializeArrayString(f.getKinds()));
                 }
 
-                if(connectFunctionGroupKindMap.equals(connectorFunctionGroupKindMap)){
+                if (connectFunctionGroupKindMap.equals(connectorFunctionGroupKindMap)) {
                     alreadyExistingConnector.add(connector.getName());
                 }
             }
         }
 
-        if(!alreadyExistingConnector.isEmpty()){
+        if (!alreadyExistingConnector.isEmpty()) {
             errors.add(ValidationError.create("Connector(s) with same kinds already exists:" + String.join(",", alreadyExistingConnector)));
         }
 
@@ -528,9 +625,9 @@ public class ConnectorServiceImpl implements ConnectorService {
     private EndpointDto findEndpoint(List<EndpointDto> endpoints, EndpointDto wanted) {
         return endpoints.stream()
                 .filter(e ->
-                                e.getName().equals(wanted.getName()) &&
+                        e.getName().equals(wanted.getName()) &&
                                 e.getContext().equals(wanted.getContext()) &&
-                                        e.getMethod().equals(wanted.getMethod())
+                                e.getMethod().equals(wanted.getMethod())
                 )
                 .findFirst()
                 .orElse(null);
@@ -543,8 +640,9 @@ public class ConnectorServiceImpl implements ConnectorService {
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
         if (ConnectorStatus.WAITING_FOR_APPROVAL.equals(connector.getStatus())) {
-            connector.setStatus(ConnectorStatus.REGISTERED);
+            connector.setStatus(ConnectorStatus.CONNECTED);
             connectorRepository.save(connector);
+            complianceRuleGroupUpdate(connector, false);
         } else {
             throw new ValidationException(ValidationError.create("Connector {} has unexpected status {}", connector.getName(), connector.getStatus()));
         }
@@ -552,7 +650,7 @@ public class ConnectorServiceImpl implements ConnectorService {
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.HEALTH, operation = OperationType.REQUEST)
-    public HealthDto checkHealth(String uuid) throws NotFoundException, ConnectorException {
+    public HealthDto checkHealth(String uuid) throws ConnectorException {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
@@ -561,7 +659,7 @@ public class ConnectorServiceImpl implements ConnectorService {
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.ATTRIBUTES, operation = OperationType.REQUEST)
-    public List<AttributeDefinition> getAttributes(String uuid, FunctionGroupCode functionGroup, String functionGroupType) throws NotFoundException, ConnectorException {
+    public List<AttributeDefinition> getAttributes(String uuid, FunctionGroupCode functionGroup, String functionGroupType) throws ConnectorException {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
@@ -572,21 +670,21 @@ public class ConnectorServiceImpl implements ConnectorService {
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.ATTRIBUTES, operation = OperationType.VALIDATE)
-    public void validateAttributes(String uuid, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws NotFoundException, ValidationException, ConnectorException  {
+    public void validateAttributes(String uuid, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws ValidationException, ConnectorException {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
         validateAttributes(connector, functionGroup, attributes, functionGroupType);
     }
 
-    private void validateAttributes(Connector connector, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws NotFoundException, ValidationException, ConnectorException  {
+    private void validateAttributes(Connector connector, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws ValidationException, ConnectorException {
         validateFunctionGroup(connector, functionGroup);
         attributeApiClient.validateAttributes(connector.mapToDto(), functionGroup, attributes, functionGroupType);
     }
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.ATTRIBUTES, operation = OperationType.VALIDATE)
-    public List<AttributeDefinition> mergeAndValidateAttributes(String uuid, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws NotFoundException, ValidationException, ConnectorException  {
+    public List<AttributeDefinition> mergeAndValidateAttributes(String uuid, FunctionGroupCode functionGroup, List<RequestAttributeDto> attributes, String functionGroupType) throws ValidationException, ConnectorException {
         Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
@@ -611,29 +709,29 @@ public class ConnectorServiceImpl implements ConnectorService {
         }
     }
 
-	@Override
-	@AuditLogged(originator = ObjectType.FE, affected = ObjectType.ATTRIBUTES, operation = OperationType.REQUEST)
-	public Map<FunctionGroupCode, Map<String, List<AttributeDefinition>>> getAllAttributesOfConnector(String uuid) throws NotFoundException, ConnectorException {
-		Connector connector = connectorRepository.findByUuid(uuid)
+    @Override
+    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.ATTRIBUTES, operation = OperationType.REQUEST)
+    public Map<FunctionGroupCode, Map<String, List<AttributeDefinition>>> getAllAttributesOfConnector(String uuid) throws ConnectorException {
+        Connector connector = connectorRepository.findByUuid(uuid)
                 .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
 
-		Map<FunctionGroupCode, Map<String, List<AttributeDefinition>>> attributes = new HashMap<>();
-		for(FunctionGroupDto fg: connector.mapToDto().getFunctionGroups()) {
-			Map<String, List<AttributeDefinition>> kindsAttribute = new HashMap<>();
-			for(String kind: fg.getKinds()) {
-				kindsAttribute.put(kind, attributeApiClient.listAttributeDefinitions(connector.mapToDto(), fg.getFunctionGroupCode(), kind));
-			}
-			attributes.put(fg.getFunctionGroupCode(), kindsAttribute);
-		}
-		return attributes;
-	}
+        Map<FunctionGroupCode, Map<String, List<AttributeDefinition>>> attributes = new HashMap<>();
+        for (FunctionGroupDto fg : connector.mapToDto().getFunctionGroups()) {
+            Map<String, List<AttributeDefinition>> kindsAttribute = new HashMap<>();
+            for (String kind : fg.getKinds()) {
+                kindsAttribute.put(kind, attributeApiClient.listAttributeDefinitions(connector.mapToDto(), fg.getFunctionGroupCode(), kind));
+            }
+            attributes.put(fg.getFunctionGroupCode(), kindsAttribute);
+        }
+        return attributes;
+    }
 
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.DELETE)
     public List<ForceDeleteMessageDto> bulkRemoveConnector(List<String> uuids) throws ValidationException, NotFoundException {
         List<Connector> deletableConnectors = new ArrayList<>();
         List<ForceDeleteMessageDto> messages = new ArrayList<>();
-        for(String uuid: uuids) {
+        for (String uuid : uuids) {
             List<String> errors = new ArrayList<>();
             Connector connector = connectorRepository.findByUuid(uuid)
                     .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
@@ -641,27 +739,42 @@ public class ConnectorServiceImpl implements ConnectorService {
 
             if (!connector.getCredentials().isEmpty()) {
                 errors.add("Dependent Credentials: " + connector.getCredentials().size() + ". Names: ");
-                connector.getCredentials().stream().forEach(
+                connector.getCredentials().forEach(
                         c -> errors.add(c.getName()));
             }
 
             if (!connector.getAuthorityInstanceReferences().isEmpty()) {
                 errors.add("Authority instances: " + connector.getAuthorityInstanceReferences().size() + ". Names: ");
-                connector.getAuthorityInstanceReferences().stream().forEach(
+                connector.getAuthorityInstanceReferences().forEach(
                         c -> errors.add(c.getName()));
+            }
+
+            if (!connector.getEntityInstanceReferences().isEmpty()) {
+                errors.add("Entity instances: " + connector.getEntityInstanceReferences().size() + ". Names: ");
+                connector.getEntityInstanceReferences().forEach(
+                        c -> errors.add(c.getName()));
+            }
+
+            Set<String> compProfiles = complianceProfileService.isComplianceProviderAssociated(connector);
+            if (!compProfiles.isEmpty()) {
+                errors.add("Compliance Profiles: " + String.join(", ", compProfiles));
             }
 
             if (!errors.isEmpty()) {
                 ForceDeleteMessageDto forceModal = new ForceDeleteMessageDto();
                 forceModal.setUuid(connector.getUuid());
                 forceModal.setName(connector.getName());
-                forceModal.setMessage(String.join(",",errors));
+                forceModal.setMessage(String.join(",", errors));
                 messages.add(forceModal);
-            }else {
+            } else {
                 deletableConnectors.add(connector);
+                if (connector.mapToDto().getFunctionGroups().stream().map(FunctionGroupDto::getFunctionGroupCode)
+                        .collect(Collectors.toList()).contains(FunctionGroupCode.COMPLIANCE_PROVIDER)) {
+                    complianceProfileService.removeRulesAndGroupForEmptyConnector(connector);
+                }
             }
         }
-        for(Connector connector: deletableConnectors) {
+        for (Connector connector : deletableConnectors) {
             List<Connector2FunctionGroup> connector2FunctionGroups = connector2FunctionGroupRepository.findAllByConnector(connector);
             connector2FunctionGroupRepository.deleteAll(connector2FunctionGroups);
             connectorRepository.delete(connector);
@@ -672,7 +785,7 @@ public class ConnectorServiceImpl implements ConnectorService {
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.CONNECTOR, operation = OperationType.FORCE_DELETE)
     public void bulkForceRemoveConnector(List<String> uuids) throws ValidationException, NotFoundException {
-        for(String uuid: uuids) {
+        for (String uuid : uuids) {
             try {
                 Connector connector = connectorRepository.findByUuid(uuid)
                         .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
@@ -694,10 +807,25 @@ public class ConnectorServiceImpl implements ConnectorService {
                     connector.getAuthorityInstanceReferences().removeAll(connector.getAuthorityInstanceReferences());
                     connectorRepository.save(connector);
                 }
+
+                if (!connector.getEntityInstanceReferences().isEmpty()) {
+                    for (EntityInstanceReference ref : connector.getEntityInstanceReferences()) {
+                        ref.setConnector(null);
+                        entityInstanceReferenceRepository.save(ref);
+                    }
+                    connector.getEntityInstanceReferences().removeAll(connector.getEntityInstanceReferences());
+                    connectorRepository.save(connector);
+                }
+
+                Set<String> compProfiles = complianceProfileService.isComplianceProviderAssociated(connector);
+                if (!compProfiles.isEmpty()) {
+                    complianceProfileService.nullifyComplianceProviderAssociation(connector);
+                }
+
                 List<Connector2FunctionGroup> connector2FunctionGroups = connector2FunctionGroupRepository.findAllByConnector(connector);
                 connector2FunctionGroupRepository.deleteAll(connector2FunctionGroups);
                 connectorRepository.delete(connector);
-            } catch (NotFoundException e){
+            } catch (NotFoundException e) {
                 logger.warn("Unable to find connector with uuid {}. It may have deleted already", uuid);
             }
         }
